--- a/views/booking_edit_pickupreturn.erb
+++ b/views/booking_edit_pickupreturn.erb
@@ -118,7 +118,14 @@
                     </div>
                   </div>           
               </div>
-              <% end %>              
+              <% end %>
+
+              <div class="navigation-bar bottom-margin">
+                <div id="error_summary" class="alert alert-danger" style="display: none; margin: 10px"></div>
+                <div class="navigation-bar-crud-buttons" style="width:100%">
+                  <input id="recalculate_button" type="button" class="create-entity-button action-button entity-management-button" style="width:100%" value="Recalcular"/>
+                </div>
+              </div>
 
       	    </div>
           </div>
@@ -161,7 +168,8 @@
 
            <div class="top-separator bottom-margin overflow">
              <div class="top-margin right-float">
-               <input id="update_button" type="button" value="<%=t.entitymanagement.update%>" class="form-button update-entity-button action-button entity-management-button" style="display:none"/>
+               <input id="update_button" type="button" value="<%=t.entitymanagement.update%>"
+                      class="form-button update-entity-button action-button entity-management-button" style="display:none"/>
              </div>  
            </div>     
          </form>
@@ -250,20 +258,6 @@
                             <td class="table-cell right_text"><%%= booking.return_place_cost.toFixed(2) %> </td>
                           </tr>                 
                           <%% } %>            
-                          <%% if (booking.product_deposit_cost > 0 ) { %>                 
-                          <tr class="table-row">
-                            <td class="table-cell uppercase_text"><%=t.new_booking.product_deposit_cost%></td>
-                            <td class="table-cell"></td>
-                            <td class="table-cell"></td>
-                            <td class="table-cell right_text"><%%= booking.product_deposit_cost.toFixed(2)%></td>
-                          </tr>                 
-                          <%% } %>                                                           
-                          <tr class="table-row">
-                              <td class="table-cell uppercase_text more_contrast_text"><%= t.booking_management.form.total_cost %></td>
-                              <td class="table-cell"></td>
-                              <td class="table-cell"></td>
-                              <td class="table-cell right_text"><%= "%.2f" % booking.total_cost %></td>                              
-                          </tr>   
                         </tbody>
                      </table>        
               </div>
@@ -359,22 +353,7 @@
                             <td class="table-cell"></td>
                             <td class="table-cell right_text"><%%= booking.return_place_cost.toFixed(2) %> </td>
                           </tr>                 
-                          <%% } %>              
-                          <%% if (booking.product_deposit_cost > 0 ) { %>                 
-                          <tr class="table-row">
-                            <td class="table-cell uppercase_text"><%=t.new_booking.product_deposit_cost%></td>
-                            <td class="table-cell"></td>
-                            <td class="table-cell"></td>
-                            <td class="table-cell right_text"><%%= booking.product_deposit_cost.toFixed(2)%></td>
-                          </tr>                 
-                          <%% } %>                                               
-                          <tr class="table-row">
-                              <td class="table-cell uppercase_text more_contrast_text"><%= t.booking_management.form.total_cost %></td>
-                              <td class="table-cell"></td>
-                              <td class="table-cell"></td>
-                              <td class="table-cell right_text"><%%= new Number(booking.total_cost).toFixed(2) %></td>                              
-                          </tr>                          
-
+                          <%% } %>
                         </tbody>
                      </table>  
                   </div>      
