--- a/views/_booking_management_driver.erb
+++ b/views/_booking_management_driver.erb
@@ -18,7 +18,9 @@
                 <div class="entity-field">
                   <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_date_of_birth %></span>
                   <span class="entity-fieldvalue">
-                     <input type="text" name="driver_date_of_birth" id="driver_date_of_birth" class="date_control" size="15" maxlength="10"/>
+                     <input type="text" name="driver_date_of_birth" id="driver_date_of_birth" class="date_control" size="15" maxlength="10"
+                            <% if driver_min_age_rules %>readonly disabled style="background:#EEE"<%end%>/>
+                     <%% if (entity.driver_age) { %> <small>(<%%= entity.driver_age %> años)</small> <%% } %>
                   </span>
                 </div>
               </div>
@@ -71,8 +73,10 @@
               <div class="element_template">
                   <div class="entity-field">
                      <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_license_date %></span>
-                     <span class="entity-fieldvalue">                     
-                        <input type="text" name="driver_driving_license_date" id="driver_driving_license_date" class="date_control" size="15" maxlength="10"/>
+                     <span class="entity-fieldvalue">
+                        <input type="text" name="driver_driving_license_date" id="driver_driving_license_date" class="date_control" size="15" maxlength="10"
+                               <% if driver_min_age_rules %>readonly disabled style="background:#EEE"<%end%>/>
+                         <%% if (entity.driver_driving_license_years) { %> <small>(<%%= entity.driver_driving_license_years %> años)</small> <%% } %>
                      </span>
                   </div>
               </div>
